Point frontend to Render API and lock CORS to Vercel domain